--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 
 		<version.bouncycastle.plugin>1.0.0</version.bouncycastle.plugin>
 		<version.checkstyle.plugin>2.17</version.checkstyle.plugin>
-		<version.compiler.plugin>3.6.1</version.compiler.plugin>
+		<version.compiler.plugin>3.8.0</version.compiler.plugin>
 		<version.docker.plugin>0.20.1</version.docker.plugin>
 		<version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
 		<version.freemarker>2.3.23</version.freemarker>
@@ -321,6 +321,7 @@
 				<configuration>
 					<source>${version.java.source}</source>
 					<target>${version.java.target}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -390,7 +391,7 @@
 						</goals>
 						<configuration>
 							<destFile>${jacoco.unit.file}</destFile>
-							<sessionId>${artifactId}-unit-${maven.build.timestamp}</sessionId>
+							<sessionId>${project.artifactId}-unit-${maven.build.timestamp}</sessionId>
 						</configuration>
 					</execution>
 					<execution>
@@ -401,7 +402,7 @@
 						</goals>
 						<configuration>
 							<destFile>${jacoco.integration.file}</destFile>
-							<sessionId>${artifactId}-integration-${maven.build.timestamp}</sessionId>
+							<sessionId>${project.artifactId}-integration-${maven.build.timestamp}</sessionId>
 						</configuration>
 					</execution>
 					<execution>
